--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -20,7 +20,7 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 ### () - SAT 04/30/2022
 
 ### () - FRI 04/29/2022
-* start post #982 on threejs-
+* start post #982 on threejs-example-weird-walk-three
 
 ### () - THU 04/28/2022
 
@@ -33,7 +33,8 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * (done) edit threejs-examples-dae-tools
 * (done) edit threejs-buffer-geometry
 
-* start post #981 on threejs-example-weird-walk-two
+* (done) start for post folder for threejs-example-weird-walk-two
+* () start post #981 on threejs-example-weird-walk-two
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
