--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -27,21 +27,20 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 ### () - WED 04/27/2022
 
 ### () - TUE 04/26/2022
+* (done) edit threejs-example-weird-walk-two
+
+* () update hexo site source with new header self image
+* () update hexo site source with header with name of site text
+* () build and publish
+* () videoground-blog-posts - threejs-emissive-map
+
 
 ### () - MON 04/25/2022
 * (done) start stand alone repo for videoground based off of r3 of for post example in electronjs
 * (done) edit threejs-examples-dae-tools
 * (done) edit threejs-buffer-geometry
-
 * (done) start for post folder for threejs-example-weird-walk-two
-* () start post #981 on threejs-example-weird-walk-two
-
-* () update hexo site source with new header self image
-* () update hexo site source with header with name of site text
-* () build and publish
-
-* () videoground-blog-posts - threejs-emissive-map
-
+* (done) start post #981 on threejs-example-weird-walk-two
 
 ### () - SUN 04/24/2022
 * (done) edit threejs-object3d-get-world-position
