--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -28,6 +28,7 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 
 ### () - TUE 04/26/2022
 * (done) edit threejs-example-weird-walk-two
+* (done) edit threejs-normal-map
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
