--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -32,8 +32,13 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
-* () build and publish
+
 * () videoground-blog-posts - threejs-emissive-map
+* () videoground-blog-posts - 
+* () videoground-blog-posts - 
+
+* () build and publish
+
 
 
 ### () - MON 04/25/2022
