--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -32,6 +32,8 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 
 * () update hexo site source with new header self image
 * () update hexo site source with header with name of site text
+* () link to threejs examples post in navbar like with canvas examples
+* () revisit background image again
 
 * () videoground-blog-posts - threejs-emissive-map
 * () videoground-blog-posts - 
