--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -18,13 +18,24 @@ I finished up with the process of quick edits last week, now I can start focusin
 This might prove to be a bit to much, but maybe only for the long run at least. If I do say in my lane with this category in time two a day will become one a day, and even eventually one a week. 
 
 ### () - SAT 04/30/2022
+* () videoground-blog-posts - 
+* () videoground-blog-posts - 
 
 ### () - FRI 04/29/2022
+* () edit threejs-lambert-material
+* () edit threejs-camera-orthographic
 * start post #982 on threejs-example-weird-walk-three
 
 ### () - THU 04/28/2022
+* () edit threejs-geometry
+* () edit threejs-materials
 
 ### () - WED 04/27/2022
+* () edit threejs-face3
+* () edit threejs-camera-perspective
+
+* () videoground-blog-posts - threejs-emissive-map
+* () videoground-blog-posts - 
 
 ### () - TUE 04/26/2022
 * (done) edit threejs-example-weird-walk-two
@@ -33,14 +44,10 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * (done) link to threejs examples post in navbar like with canvas examples
 * (done) revisit background image again
 * (done) update hexo site source with new header self image
-
-* () videoground-blog-posts - threejs-emissive-map
-* () videoground-blog-posts - 
-* () videoground-blog-posts - 
-
-* () build and publish
-
-
+* (done) remove text for website name from banner image
+* (done) background for nav links
+* (done) videoground-blog-posts - threejs-examples-backyard
+* (done) build and publish
 
 ### () - MON 04/25/2022
 * (done) start stand alone repo for videoground based off of r3 of for post example in electronjs
