--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -31,7 +31,7 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * () edit threejs-materials
 
 ### () - WED 04/27/2022
-* () edit threejs-face3
+* (done) edit threejs-face3
 * () edit threejs-camera-perspective
 
 * () videoground-blog-posts - threejs-emissive-map
