--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -32,7 +32,7 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 
 ### () - WED 04/27/2022
 * (done) edit threejs-face3
-* () edit threejs-camera-perspective
+* (done) edit threejs-camera-perspective
 
 * () videoground-blog-posts - threejs-emissive-map
 * () videoground-blog-posts - 
