--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -34,8 +34,15 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * (done) edit threejs-face3
 * (done) edit threejs-camera-perspective
 
+* (done) videoground-blog-posts - threejs-examples-basic-framework
+* () videoground-blog-posts - threejs-examples-biplane
+* () videoground-blog-posts - threejs-examples-house
+* () videoground-blog-posts - threejs-mesh-copy
+* () videoground-blog-posts - threejs-geometry-attributes-uv
+* () videoground-blog-posts - threejs-object32-traverse
+
 * () videoground-blog-posts - threejs-emissive-map
-* () videoground-blog-posts - 
+
 
 ### () - TUE 04/26/2022
 * (done) edit threejs-example-weird-walk-two
