--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -35,7 +35,8 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * (done) edit threejs-camera-perspective
 
 * (done) videoground-blog-posts - threejs-examples-basic-framework
-* () videoground-blog-posts - threejs-examples-biplane
+* (done) videoground-blog-posts - threejs-examples-biplane
+
 * () videoground-blog-posts - threejs-examples-house
 * () videoground-blog-posts - threejs-mesh-copy
 * () videoground-blog-posts - threejs-geometry-attributes-uv
