--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -27,8 +27,8 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * start post #982 on threejs-example-weird-walk-three
 
 ### () - THU 04/28/2022
-* () edit threejs-geometry
-* () edit threejs-materials
+* (done) edit threejs-geometry
+* (done) edit threejs-materials
 
 * () videoground-blog-posts - threejs-mesh-copy
 * () videoground-blog-posts - threejs-examples-house
