--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -26,15 +26,17 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * () edit threejs-camera-orthographic
 * start post #982 on threejs-example-weird-walk-three
 
-### () - THU 04/28/2022
-* (done) edit threejs-geometry
-* (done) edit threejs-materials
-
-* () videoground-blog-posts - threejs-mesh-copy
 * () videoground-blog-posts - threejs-examples-house
 * () videoground-blog-posts - threejs-geometry-attributes-uv
 * () videoground-blog-posts - threejs-object32-traverse
 
+### () - THU 04/28/2022
+* (done) edit threejs-geometry
+* (done) edit threejs-materials
+* (done) videoground-blog-posts - threejs-mesh-copy
+* (done) videoground-blog-posts - threejs-examples-waves
+* (done) videoground-blog-posts - threejs-examples-tree
+* (done) videoground-blog-posts - threejs-examples-nested-groups
 
 ### () - WED 04/27/2022
 * (done) edit threejs-face3
