--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -22,8 +22,8 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * () videoground-blog-posts - 
 
 ### () - FRI 04/29/2022
-* () edit threejs-lambert-material
-* () edit threejs-camera-orthographic
+* (done) edit threejs-lambert-material
+* (done) edit threejs-camera-orthographic
 * start post #982 on threejs-example-weird-walk-three
 
 * () videoground-blog-posts - threejs-examples-house
