--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -12,8 +12,11 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 <!-- ////////// //////////
     WEEK 1
 /////////////// ///////-->
-## () - SUN 05/01/2022 to  SAT 04/07/2022
+## () - SUN 05/01/2022 to  SAT 05/07/2022
 
-### () - SAT 05/07/2022
+* start post #984 on threejs-example-weird-walk-three
 
-### () - FRI 05/01/2022
+### () - MON 05/02/2022
+* start post #983 on threejs-example-cube-stack-grid
+
+### () - SUN 05/01/2022
