--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -24,7 +24,7 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 ### () - FRI 04/29/2022
 * (done) edit threejs-lambert-material
 * (done) edit threejs-camera-orthographic
-* start post #982 on threejs-example-cube-stack
+* (done) start post #982 on threejs-example-cube-stack
 
 * () videoground-blog-posts - threejs-examples-house
 * () videoground-blog-posts - threejs-geometry-attributes-uv
