--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -18,17 +18,16 @@ I finished up with the process of quick edits last week, now I can start focusin
 This might prove to be a bit to much, but maybe only for the long run at least. If I do say in my lane with this category in time two a day will become one a day, and even eventually one a week. 
 
 ### () - SAT 04/30/2022
-* () videoground-blog-posts - 
-* () videoground-blog-posts - 
+* (done) videoground-blog-posts - threejs-examples-house
+* (done) videoground-blog-posts - threejs-geometry-attributes-uv
+* (done) videoground-blog-posts - threejs-object32-traverse
+* (done) videoground-blog-posts - threejs-examples-cube-stack
+* () edit threejs-example-cube-stack
 
 ### () - FRI 04/29/2022
 * (done) edit threejs-lambert-material
 * (done) edit threejs-camera-orthographic
 * (done) start post #982 on threejs-example-cube-stack
-
-* () videoground-blog-posts - threejs-examples-house
-* () videoground-blog-posts - threejs-geometry-attributes-uv
-* () videoground-blog-posts - threejs-object32-traverse
 
 ### () - THU 04/28/2022
 * (done) edit threejs-geometry
