--- a/todo/today/todo_2022_04.md
+++ b/todo/today/todo_2022_04.md
@@ -22,7 +22,7 @@ This might prove to be a bit to much, but maybe only for the long run at least. 
 * (done) videoground-blog-posts - threejs-geometry-attributes-uv
 * (done) videoground-blog-posts - threejs-object32-traverse
 * (done) videoground-blog-posts - threejs-examples-cube-stack
-* () edit threejs-example-cube-stack
+* (done) edit threejs-example-cube-stack
 
 ### () - FRI 04/29/2022
 * (done) edit threejs-lambert-material
