--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -20,3 +20,5 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 * start post #983 on threejs-example-cube-stack-grid
 
 ### () - SUN 05/01/2022
+* (done) videoground-blog-posts - threejs-alpha-map
+* (done) edit threejs-alpha-map
