--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -14,10 +14,32 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 /////////////// ///////-->
 ## () - SUN 05/01/2022 to  SAT 05/07/2022
 
-* start post #984 on threejs-example-weird-walk-three
+### () - SAT 05/02/2022
+* () edit threejs-examples-tool-source-layer-3d
+
+### () - FRI 05/02/2022
+* () start post #984 on threejs-example-weird-walk-three
+
+### () - THU 05/02/2022
+* () edit threejs-euler
+
+### () - WED 05/02/2022
+* () threejs-getting-started
+
+### () - TUE 05/02/2022
+* () edit threejs-vector3-set-from-spherical-coords
 
 ### () - MON 05/02/2022
-* start post #983 on threejs-example-cube-stack-grid
+* () edit threejs-mesh
+
+* () start threejs-example-cube-stack-grid for post folder in test threejs
+* () start post #983 on threejs-example-cube-stack-grid
+
+* () videoground-blog-posts - threejs-example-cube-stack-grid
+* () videoground-blog-posts - threejs-line
+* () videoground-blog-posts - threejs-vector3
+
+
 
 ### () - SUN 05/01/2022
 * (done) videoground-blog-posts - threejs-alpha-map
