--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -36,6 +36,7 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 * () start post #983 on threejs-example-cube-stack-grid
 
 * () videoground-blog-posts - threejs-example-cube-stack-grid
+* () videoground-blog-posts - threejs-mesh
 * () videoground-blog-posts - threejs-line
 * () videoground-blog-posts - threejs-vector3
 
