--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -30,7 +30,7 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 * () edit threejs-vector3-set-from-spherical-coords
 
 ### () - MON 05/02/2022
-* () edit threejs-mesh
+* (done) edit threejs-mesh
 
 * () start threejs-example-cube-stack-grid for post folder in test threejs
 * () start post #983 on threejs-example-cube-stack-grid
