--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -28,12 +28,12 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 
 ### () - TUE 05/02/2022
 * () edit threejs-vector3-set-from-spherical-coords
+* () edit threejs-example-cube-stack-grid
 
 ### () - MON 05/02/2022
 * (done) edit threejs-mesh
-
-* () start threejs-example-cube-stack-grid for post folder in test threejs
-* () start post #983 on threejs-example-cube-stack-grid
+* (done) start threejs-example-cube-stack-grid for post folder in test threejs
+* (done) start post #983 on threejs-example-cube-stack-grid
 
 * () videoground-blog-posts - threejs-example-cube-stack-grid
 * () videoground-blog-posts - threejs-mesh
