--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -26,11 +26,15 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 ### () - WED 05/02/2022
 * () threejs-getting-started
 
+* () videoground-blog-posts - threejs-line
+* () videoground-blog-posts - threejs-vector3
+
 ### () - TUE 05/02/2022
 * () edit threejs-vector3-set-from-spherical-coords
 * () edit threejs-example-cube-stack-grid
-* () videoground-blog-posts - threejs-line
-* () videoground-blog-posts - threejs-vector3
+
+* (done) videoground-blog-posts - threejs-arrow-helper
+* () videoground-blog-posts - threejs-vector3-set-from-spherical-coords
 
 ### () - MON 05/02/2022
 * (done) edit threejs-mesh
