--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -22,19 +22,22 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 
 ### () - THU 05/02/2022
 * () edit threejs-euler
+* () videoground-blog-posts - threejs-vector3
+* () videoground-blog-posts - threejs-euler
 
 ### () - WED 05/02/2022
-* () threejs-getting-started
-
+* () edit threejs-getting-started
+* () edit edit threejs-example-cube-stack-grid
 * () videoground-blog-posts - threejs-line
-* () videoground-blog-posts - threejs-vector3
+* () videoground-blog-posts - threejs-getting-started
+
 
 ### () - TUE 05/02/2022
-* () edit threejs-vector3-set-from-spherical-coords
-* () edit threejs-example-cube-stack-grid
-
+* (done) edit threejs-vector3-set-from-spherical-coords
+* (done) edit threejs-example-cube-stack-grid
+* (done) edit threejs-arrow-helper
 * (done) videoground-blog-posts - threejs-arrow-helper
-* () videoground-blog-posts - threejs-vector3-set-from-spherical-coords
+* (done) videoground-blog-posts - threejs-vector3-set-from-spherical-coords
 
 ### () - MON 05/02/2022
 * (done) edit threejs-mesh
