--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -38,6 +38,7 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 * (done) edit threejs-arrow-helper
 * (done) videoground-blog-posts - threejs-arrow-helper
 * (done) videoground-blog-posts - threejs-vector3-set-from-spherical-coords
+* (done) videoground-blog-posts - threejs-basic-material
 
 ### () - MON 05/02/2022
 * (done) edit threejs-mesh
