--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -27,8 +27,9 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 
 ### () - WED 05/02/2022
 * () edit threejs-getting-started
-* () edit edit threejs-example-cube-stack-grid
-* () videoground-blog-posts - threejs-line
+* () edit threejs-example-cube-stack-grid
+* () edit threejs-line
+* (done) videoground-blog-posts - threejs-line
 * () videoground-blog-posts - threejs-getting-started
 
 
