--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -26,10 +26,11 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 * () videoground-blog-posts - threejs-euler
 
 ### () - WED 05/02/2022
-* () edit threejs-getting-started
 * () edit threejs-example-cube-stack-grid
-* () edit threejs-line
+* (done) edit threejs-line
 * (done) videoground-blog-posts - threejs-line
+
+* () edit threejs-getting-started
 * () videoground-blog-posts - threejs-getting-started
 
 
