--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -2,7 +2,7 @@
 
 THREEJS, VIDEOGROUND, ELECTRONJS, JS, VUEJS, LINUX
 
-This month I think the plan should be to stay in my lane with threejs for at least one more Month. Durring this time I should also work on my videoground project as that is clsly related to doing so. With that said there is also the potential to write about other things to which videground is based on.
+This month I think the plan should be to stay in my lane with threejs for at least one more Month. During this time I should also work on my videoground project as that is closely related to doing so. With that said there is also the potential to write about other things to which videground is based on, but For now I am thinking I should get as mcuh out of the way with my blog post videos.
 
 ## new posts
 
@@ -22,17 +22,17 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 
 ### () - THU 05/02/2022
 * () edit threejs-euler
-* () videoground-blog-posts - threejs-vector3
 * () videoground-blog-posts - threejs-euler
+
+* () edit threejs-getting-started
+* () videoground-blog-posts - threejs-getting-started
 
 ### () - WED 05/02/2022
 * () edit threejs-example-cube-stack-grid
 * (done) edit threejs-line
 * (done) videoground-blog-posts - threejs-line
-
-* () edit threejs-getting-started
-* () videoground-blog-posts - threejs-getting-started
-
+* (done) videoground-blog-posts - threejs-vector3
+* (done) videoground-blog-posts - threejs-threejs-examples-guy-one
 
 ### () - TUE 05/02/2022
 * (done) edit threejs-vector3-set-from-spherical-coords
