--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -22,13 +22,14 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 
 ### () - THU 05/02/2022
 * () edit threejs-euler
-* () videoground-blog-posts - threejs-euler
-
+* () edit threejs-example-cube-stack-grid
 * () edit threejs-getting-started
+
+* () videoground-blog-posts - threejs-euler
 * () videoground-blog-posts - threejs-getting-started
 
 ### () - WED 05/02/2022
-* () edit threejs-example-cube-stack-grid
+* (done) edit threejs-example-cube-stack-grid
 * (done) edit threejs-line
 * (done) videoground-blog-posts - threejs-line
 * (done) videoground-blog-posts - threejs-vector3
