--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -2,7 +2,7 @@
 
 THREEJS, VIDEOGROUND, ELECTRONJS, JS, VUEJS, LINUX
 
-This month I think the plan should be to stay in my lane with threejs for at least one more Month. During this time I should also work on my videoground project as that is closely related to doing so. With that said there is also the potential to write about other things to which videground is based on, but For now I am thinking I should get as mcuh out of the way with my blog post videos.
+This month I think the plan should be to stay in my lane with threejs for at least one more Month. During this time I should also work on my videoground project as that is closely related to doing so. With that said there is also the potential to write about other things to which videground is based on, but For now I am thinking I should get as much out of the way with my blog post videos.
 
 ## new posts
 
@@ -21,12 +21,13 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 * () start post #984 on threejs-example-weird-walk-three
 
 ### () - THU 05/02/2022
-* () edit threejs-euler
-* () edit threejs-example-cube-stack-grid
-* () edit threejs-getting-started
+* (done) edit threejs-euler
+* (done) edit threejs-getting-started
+* (done) videoground-blog-posts - threejs-euler
+* (done) videoground-blog-posts - threejs-getting-started
 
-* () videoground-blog-posts - threejs-euler
-* () videoground-blog-posts - threejs-getting-started
+* () edit threejs-example-cube-stack-grid
+
 
 ### () - WED 05/02/2022
 * (done) edit threejs-example-cube-stack-grid
