--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -14,29 +14,27 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 /////////////// ///////-->
 ## () - SUN 05/01/2022 to  SAT 05/07/2022
 
-### () - SAT 05/02/2022
-* () edit threejs-examples-tool-source-layer-3d
+### () - SAT 05/07/2022
+* () edit threejs-examples-lookat-with-apply-euler
 
-### () - FRI 05/02/2022
-* () start post #984 on threejs-example-weird-walk-three
+### () - FRI 05/06/2022
+* (done) start post #984 on threejs-examples-lookat-with-apply-euler
 
-### () - THU 05/02/2022
+### () - THU 05/05/2022
 * (done) edit threejs-euler
 * (done) edit threejs-getting-started
 * (done) videoground-blog-posts - threejs-euler
 * (done) videoground-blog-posts - threejs-getting-started
+* (done) edit threejs-example-cube-stack-grid
 
-* () edit threejs-example-cube-stack-grid
-
-
-### () - WED 05/02/2022
+### () - WED 05/04/2022
 * (done) edit threejs-example-cube-stack-grid
 * (done) edit threejs-line
 * (done) videoground-blog-posts - threejs-line
 * (done) videoground-blog-posts - threejs-vector3
 * (done) videoground-blog-posts - threejs-threejs-examples-guy-one
 
-### () - TUE 05/02/2022
+### () - TUE 05/03/2022
 * (done) edit threejs-vector3-set-from-spherical-coords
 * (done) edit threejs-example-cube-stack-grid
 * (done) edit threejs-arrow-helper
