--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -4,9 +4,25 @@ THREEJS, VIDEOGROUND, ELECTRONJS, JS, VUEJS, LINUX
 
 This month I think the plan should be to stay in my lane with threejs for at least one more Month. During this time I should also work on my videoground project as that is closely related to doing so. With that said there is also the potential to write about other things to which videground is based on, but For now I am thinking I should get as much out of the way with my blog post videos.
 
-## new posts
+<!-- ////////// //////////
+    WEEK 2
+/////////////// ///////-->
+## () - SUN 05/08/2022 to  SAT 05/14/2022
 
-## editing 
+### () - SAT 05/14/2022
+
+### () - FRI 05/13/2022
+
+### () - THU 05/12/2022
+
+### () - WED 05/11/2022
+
+### () - TUE 05/10/2022
+
+### () - MON 05/09/2022
+* () start post # 985 on threejs-box3
+
+### () - SUN 05/08/2022
 
 
 <!-- ////////// //////////
