--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -31,6 +31,7 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 ## () - SUN 05/01/2022 to  SAT 05/07/2022
 
 ### () - SAT 05/07/2022
+* () edit threejs-examples
 * () edit threejs-examples-lookat-with-apply-euler
 
 ### () - FRI 05/06/2022
