--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -34,6 +34,8 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 * () edit threejs-examples
 * () edit threejs-examples-lookat-with-apply-euler
 
+* () videoground-blog-posts - threejs-examples-tree-sphere
+
 ### () - FRI 05/06/2022
 * (done) start post #984 on threejs-examples-lookat-with-apply-euler
 * (done) videoground-blog-posts - threejs-examples-lookat-with-apply-euler
