--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -9,26 +9,59 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 /////////////// ///////-->
 ## () - SUN 05/08/2022 to  SAT 05/14/2022
 
+This week I am thinking that I should try out just making only one blog post video per day, and as such focus a little more on what my other collection of videos 'beta world' is going to be about. Also when it comes to editing old threejs posts I can now think in terms of just one post per day, and giving just that one post a greater deal of attraction. New posts this week should be on the THREE.Box3 class which is one thing that I have not got around to write a post on yet, and at least one more additional threejs examples post.
+
 ### () - SAT 05/14/2022
+* () edit threejs-
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
 
 ### () - FRI 05/13/2022
+* () edit threejs-
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
 
 ### () - THU 05/12/2022
+* () edit threejs-
+* () start post # 986 on threejs-examples-
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
 
 ### () - WED 05/11/2022
+* () edit threejs-
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
 
 ### () - TUE 05/10/2022
+* () edit threejs-
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
 
 ### () - MON 05/09/2022
+* () edit threejs-
 * () start post # 985 on threejs-box3
 
-### () - SUN 05/08/2022
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
 
+### () - SUN 05/08/2022
+* () edit threejs-
+* () build and publish
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
 
 <!-- ////////// //////////
     WEEK 1
 /////////////// ///////-->
 ## () - SUN 05/01/2022 to  SAT 05/07/2022
+
+This week the main focus was on getting a lot more of the quick place holder type videos for my blog posts, aiming for at least two a day but as many as four or more if possible.
 
 ### () - SAT 05/07/2022
 * () edit threejs-examples
