--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -2,7 +2,7 @@
 
 THREEJS, VIDEOGROUND, ELECTRONJS, JS, VUEJS, LINUX
 
-This month I think the plan should be to stay in my lane with threejs for at least one more Month. During this time I should also work on my videoground project as that is closely related to doing so. With that said there is also the potential to write about other things to which videground is based on, but For now I am thinking I should get as much out of the way with my blog post videos.
+This month I think the plan should be to stay in my lane with threejs for at least one more Month. During this time I should also work on my videoground project as that is closely related to doing so. With that said there is also the potential to write about other things to which videoground is based on, but For now I am thinking I should get as much out of the way with my blog post videos.
 
 <!-- ////////// //////////
     WEEK 2
@@ -51,9 +51,10 @@ This week I am thinking that I should try out just making only one blog post vid
 
 ### () - SUN 05/08/2022
 * () edit threejs-
+* () videoground-blog-posts - threejs-examples-tree-sphere-world
+* () edit threejs-examples-tree-sphere-world
 * () build and publish
 
-* () videoground-blog-posts - 
 * () videoground-beta-world - 
 
 <!-- ////////// //////////
@@ -64,10 +65,9 @@ This week I am thinking that I should try out just making only one blog post vid
 This week the main focus was on getting a lot more of the quick place holder type videos for my blog posts, aiming for at least two a day but as many as four or more if possible.
 
 ### () - SAT 05/07/2022
-* () edit threejs-examples
-* () edit threejs-examples-lookat-with-apply-euler
-
-* () videoground-blog-posts - threejs-examples-tree-sphere
+* (done) edit threejs-examples
+* (done) edit threejs-examples-lookat-with-apply-euler
+* (done) videoground-blog-posts - threejs-examples-tree-sphere
 
 ### () - FRI 05/06/2022
 * (done) start post #984 on threejs-examples-lookat-with-apply-euler
