--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -12,45 +12,45 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 This week I am thinking that I should try out just making only one blog post video per day, and as such focus a little more on what my other collection of videos 'beta world' is going to be about. Also when it comes to editing old threejs posts I can now think in terms of just one post per day, and giving just that one post a greater deal of attraction. New posts this week should be on the THREE.Box3 class which is one thing that I have not got around to write a post on yet, and at least one more additional threejs examples post.
 
 ### () - SAT 05/14/2022
-* () edit threejs-
+* () edit threejs-directional-light
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
 
 ### () - FRI 05/13/2022
-* () edit threejs-
+* () edit threejs-sphere
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
 
 ### () - THU 05/12/2022
-* () edit threejs-
+* () edit threejs-color
 * () start post # 986 on threejs-examples-
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
 
 ### () - WED 05/11/2022
-* () edit threejs-
+* () edit threejs-grid-helper
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
 
 ### () - TUE 05/10/2022
-* () edit threejs-
+* () edit threejs-camera-move
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
 
 ### () - MON 05/09/2022
-* () edit threejs-
+* () edit threejs-examples-tool-source-layer-3d
 * () start post # 985 on threejs-box3
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
 
 ### () - SUN 05/08/2022
-* () edit threejs-
+* () edit threejs-box-helper
 * () videoground-blog-posts - threejs-examples-tree-sphere-world
 * () edit threejs-examples-tree-sphere-world
 * () build and publish
