--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -19,6 +19,8 @@ This week I am thinking that I should try out just making only one blog post vid
 
 ### () - FRI 05/13/2022
 * () edit threejs-sphere
+* () hexo_sitesource - new header image
+* () build and publish
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
@@ -50,12 +52,10 @@ This week I am thinking that I should try out just making only one blog post vid
 * () videoground-beta-world - 
 
 ### () - SUN 05/08/2022
-* () edit threejs-box-helper
-* () videoground-blog-posts - threejs-examples-tree-sphere-world
-* () edit threejs-examples-tree-sphere-world
-* () build and publish
-
-* () videoground-beta-world - 
+* (done) edit threejs-box-helper
+* (done) videoground-blog-posts - threejs-examples-tree-sphere-world
+* (done) edit threejs-examples-tree-sphere-world
+* (done) build and publish
 
 <!-- ////////// //////////
     WEEK 1
