--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -45,10 +45,14 @@ This week I am thinking that I should try out just making only one blog post vid
 * () videoground-beta-world - 
 
 ### () - MON 05/09/2022
-* () edit threejs-examples-tool-source-layer-3d
+* (done) edit threejs-examples-tool-source-layer-3d
+* () edit threejs-spotlights
+
+* () start for post folder for threejs-box3
 * () start post # 985 on threejs-box3
 
-* () videoground-blog-posts - 
+* () videoground-blog-posts - threejs-box3
+* () videoground-blog-posts - threejs-spotlights
 * () videoground-beta-world - 
 
 ### () - SUN 05/08/2022
