--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -46,7 +46,7 @@ This week I am thinking that I should try out just making only one blog post vid
 
 ### () - MON 05/09/2022
 * (done) edit threejs-examples-tool-source-layer-3d
-* () edit threejs-spotlights
+* (done) edit threejs-spotlights
 
 * () start for post folder for threejs-box3
 * () start post # 985 on threejs-box3
