--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -40,6 +40,7 @@ This week I am thinking that I should try out just making only one blog post vid
 
 ### () - TUE 05/10/2022
 * () edit threejs-camera-move
+* () edit threejs-box3
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
@@ -47,9 +48,8 @@ This week I am thinking that I should try out just making only one blog post vid
 ### () - MON 05/09/2022
 * (done) edit threejs-examples-tool-source-layer-3d
 * (done) edit threejs-spotlights
-
-* () start for post folder for threejs-box3
-* () start post # 985 on threejs-box3
+* (done) start for post folder for threejs-box3
+* (done) start post # 985 on threejs-box3
 
 * () videoground-blog-posts - threejs-box3
 * () videoground-blog-posts - threejs-spotlights
