--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -50,16 +50,15 @@ This week I am thinking that I should try out just making only one blog post vid
 * (done) edit threejs-spotlights
 * (done) start for post folder for threejs-box3
 * (done) start post # 985 on threejs-box3
-
-* () videoground-blog-posts - threejs-box3
-* () videoground-blog-posts - threejs-spotlights
-* () videoground-beta-world - 
+* (done) videoground-blog-posts - threejs-box3
+* (done) videoground-blog-posts - threejs-spotlights
 
 ### () - SUN 05/08/2022
 * (done) edit threejs-box-helper
 * (done) videoground-blog-posts - threejs-examples-tree-sphere-world
 * (done) edit threejs-examples-tree-sphere-world
 * (done) build and publish
+* (done) videoground-beta-world - work on cube scape
 
 <!-- ////////// //////////
     WEEK 1
