--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -42,8 +42,8 @@ This week I am thinking that I should try out just making only one blog post vid
 * () edit threejs-camera-move
 * () edit threejs-box3
 
-* () videoground-blog-posts - 
-* () videoground-beta-world - 
+* () videoground-blog-posts - camera-move
+* () videoground-beta-world - work on cube scape
 
 ### () - MON 05/09/2022
 * (done) edit threejs-examples-tool-source-layer-3d
