--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -39,7 +39,7 @@ This week I am thinking that I should try out just making only one blog post vid
 * () videoground-beta-world - 
 
 ### () - TUE 05/10/2022
-* () edit threejs-camera-move
+* (done) edit threejs-camera-move
 * () edit threejs-box3
 
 * () videoground-blog-posts - camera-move
