--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -40,7 +40,7 @@ This week I am thinking that I should try out just making only one blog post vid
 
 ### () - TUE 05/10/2022
 * (done) edit threejs-camera-move
-* () edit threejs-box3
+* (done) edit threejs-box3
 
 * () videoground-blog-posts - camera-move
 * () videoground-beta-world - work on cube scape
