--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -4,6 +4,13 @@ THREEJS, VIDEOGROUND, ELECTRONJS, JS, VUEJS, LINUX
 
 This month I think the plan should be to stay in my lane with threejs for at least one more Month. During this time I should also work on my videoground project as that is closely related to doing so. With that said there is also the potential to write about other things to which videoground is based on, but For now I am thinking I should get as much out of the way with my blog post videos.
 
+
+
+<!-- ////////// //////////
+    WEEK 3
+/////////////// ///////-->
+* () start post # 987 on threejs-vector3-lerp
+
 <!-- ////////// //////////
     WEEK 2
 /////////////// ///////-->
@@ -27,7 +34,7 @@ This week I am thinking that I should try out just making only one blog post vid
 
 ### () - THU 05/12/2022
 * () edit threejs-color
-* () start post # 986 on threejs-examples-
+* () start post # 986 on threejs-examples-seq-hooks
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
