--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -48,8 +48,7 @@ This week I am thinking that I should try out just making only one blog post vid
 ### () - TUE 05/10/2022
 * (done) edit threejs-camera-move
 * (done) edit threejs-box3
-
-* () videoground-blog-posts - camera-move
+* (done) videoground-blog-posts - camera-move
 * () videoground-beta-world - work on cube scape
 
 ### () - MON 05/09/2022
