--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -36,20 +36,19 @@ This week I am thinking that I should try out just making only one blog post vid
 * () edit threejs-color
 * () start post # 986 on threejs-examples-seq-hooks
 
-* () videoground-blog-posts - 
-* () videoground-beta-world - 
+* () videoground-blog-posts - threejs-examples-seq-hooks
+* () videoground-beta-world - finish cube scape
 
 ### () - WED 05/11/2022
 * () edit threejs-grid-helper
 
-* () videoground-blog-posts - 
-* () videoground-beta-world - 
+* () videoground-blog-posts - threejs-grid-helper
+* () videoground-beta-world  - work on cube scape
 
 ### () - TUE 05/10/2022
 * (done) edit threejs-camera-move
 * (done) edit threejs-box3
 * (done) videoground-blog-posts - camera-move
-* () videoground-beta-world - work on cube scape
 
 ### () - MON 05/09/2022
 * (done) edit threejs-examples-tool-source-layer-3d
