--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -40,9 +40,9 @@ This week I am thinking that I should try out just making only one blog post vid
 * () videoground-beta-world - finish cube scape
 
 ### () - WED 05/11/2022
-* () edit threejs-grid-helper
+* (done) edit threejs-grid-helper
+* (done) videoground-blog-posts - threejs-grid-helper
 
-* () videoground-blog-posts - threejs-grid-helper
 * () videoground-beta-world  - work on cube scape
 
 ### () - TUE 05/10/2022
