--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -37,13 +37,12 @@ This week I am thinking that I should try out just making only one blog post vid
 * () start post # 986 on threejs-examples-seq-hooks
 
 * () videoground-blog-posts - threejs-examples-seq-hooks
-* () videoground-beta-world - finish cube scape
+* () videoground-beta-world - finish cubescape-ep1-dream
 
 ### () - WED 05/11/2022
 * (done) edit threejs-grid-helper
 * (done) videoground-blog-posts - threejs-grid-helper
-
-* () videoground-beta-world  - work on cube scape
+* (done) videoground-beta-world  - work on cube scape
 
 ### () - TUE 05/10/2022
 * (done) edit threejs-camera-move
