--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -33,7 +33,7 @@ This week I am thinking that I should try out just making only one blog post vid
 * () videoground-beta-world - 
 
 ### () - THU 05/12/2022
-* () edit threejs-color
+* (done) edit threejs-color
 * () start post # 986 on threejs-examples-seq-hooks
 
 * () videoground-blog-posts - threejs-examples-seq-hooks
