--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -35,7 +35,8 @@ This week I am thinking that I should try out just making only one blog post vid
 ### () - THU 05/12/2022
 * (done) edit threejs-color
 * (done) start for post folder for threejs-examples-seq-hooks
-* () start post # 986 on threejs-examples-seq-hooks
+* (done) start post # 986 on threejs-examples-seq-hooks
+* (done) edit threejs-examples
 
 * () videoground-blog-posts - threejs-examples-seq-hooks
 * () videoground-beta-world - finish cubescape-ep1-dream
