--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -37,9 +37,8 @@ This week I am thinking that I should try out just making only one blog post vid
 * (done) start for post folder for threejs-examples-seq-hooks
 * (done) start post # 986 on threejs-examples-seq-hooks
 * (done) edit threejs-examples
-
-* () videoground-blog-posts - threejs-examples-seq-hooks
-* () videoground-beta-world - finish cubescape-ep1-dream
+* (done) videoground-blog-posts - threejs-examples-seq-hooks
+* (done) videoground-beta-world - finish cubescape-ep1-dream
 
 ### () - WED 05/11/2022
 * (done) edit threejs-grid-helper
