--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -20,17 +20,15 @@ This week I am thinking that I should try out just making only one blog post vid
 
 ### () - SAT 05/14/2022
 * () edit threejs-directional-light
-
-* () videoground-blog-posts - 
-* () videoground-beta-world - 
-
-### () - FRI 05/13/2022
-* () edit threejs-sphere
 * () hexo_sitesource - new header image
 * () build and publish
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
+
+### () - FRI 05/13/2022
+* (done) edit threejs-sphere
+* (done) videoground-blog-posts - threejs-sphere
 
 ### () - THU 05/12/2022
 * (done) edit threejs-color
