--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -9,7 +9,50 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 <!-- ////////// //////////
     WEEK 3
 /////////////// ///////-->
+## () - SUN 05/15/2022 to  SAT 05/21/2022
+
+I should still try to focus on beta world this week, by starting at least one more cube scape video, as well as getting the one I all ready have just about done in better shape. However as long as I do not have a clear idea as to what to do with beta world in terms of how to not just put it out there, but also promote it a little, I think I should focus more so on the blog post videos this week.
+
+
+### () - SAT 05/21/2022
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
+
+### () - FRI 05/20/2022
+* () start post # 988 on threejs-vector3-lerp
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
+
+### () - THU 05/19/2022
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
+
+### () - WED 05/18/2022
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
+
+### () - TUE 05/17/2022
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
+
+### () - MON 05/16/2022
 * () start post # 987 on threejs-vector3-lerp
+
+
+* () videoground-blog-posts - 
+* () videoground-beta-world - 
+
+### () - SUN 05/15/2022
+* () edit threejs-
+* () videoground-blog-posts - 
+
+* () hexo_sitesource - new header image
+* () build and publish
+* () videoground-beta-world - 
 
 <!-- ////////// //////////
     WEEK 2
@@ -19,12 +62,8 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 This week I am thinking that I should try out just making only one blog post video per day, and as such focus a little more on what my other collection of videos 'beta world' is going to be about. Also when it comes to editing old threejs posts I can now think in terms of just one post per day, and giving just that one post a greater deal of attraction. New posts this week should be on the THREE.Box3 class which is one thing that I have not got around to write a post on yet, and at least one more additional threejs examples post.
 
 ### () - SAT 05/14/2022
-* () edit threejs-directional-light
-* () hexo_sitesource - new header image
-* () build and publish
-
-* () videoground-blog-posts - 
-* () videoground-beta-world - 
+* (done) edit threejs-directional-light
+* (done) videoground-blog-posts - threejs-directional-light
 
 ### () - FRI 05/13/2022
 * (done) edit threejs-sphere
