--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -35,23 +35,25 @@ I should still try to focus on beta world this week, by starting at least one mo
 * () videoground-beta-world - 
 
 ### () - TUE 05/17/2022
+* () start post # 987 on threejs-vector3-lerp
 
 * () videoground-blog-posts - 
 * () videoground-beta-world - 
 
 ### () - MON 05/16/2022
-* () start post # 987 on threejs-vector3-lerp
-
-
-* () videoground-blog-posts - 
-* () videoground-beta-world - 
-
-### () - SUN 05/15/2022
 * () edit threejs-
 * () videoground-blog-posts - 
 
 * () hexo_sitesource - new header image
 * () build and publish
+
+* () videoground-beta-world - 
+
+### () - SUN 05/15/2022
+* (done) edit threejs-light
+* (done) videoground-blog-posts - threejs-light
+
+
 * () videoground-beta-world - 
 
 <!-- ////////// //////////
