--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -15,35 +15,35 @@ I should still try to focus on beta world this week, by starting at least one mo
 
 
 ### () - SAT 05/21/2022
-
-* () videoground-blog-posts - 
+* () edit threejs-plane
+* () videoground-blog-posts - threejs-plane
 * () videoground-beta-world - 
 
 ### () - FRI 05/20/2022
-* () start post # 988 on threejs-vector3-lerp
-* () videoground-blog-posts - 
+* () edit threejs-userdata
+* () start post # 988 on threejs-export-png-frames
+* () videoground-blog-posts - threejs-userdata
 * () videoground-beta-world - 
 
 ### () - THU 05/19/2022
-
-* () videoground-blog-posts - 
+* () edit threejs-object3d-parent
+* () videoground-blog-posts - threejs-object3d-parent
 * () videoground-beta-world - 
 
 ### () - WED 05/18/2022
-
-* () videoground-blog-posts - 
+* () edit threejs-object3d
+* () videoground-blog-posts - threejs-object3d
 * () videoground-beta-world - 
 
 ### () - TUE 05/17/2022
+* () edit threejs-cone
 * () start post # 987 on threejs-vector3-lerp
-
-* () videoground-blog-posts - 
+* () videoground-blog-posts - threejs-cone
 * () videoground-beta-world - 
 
 ### () - MON 05/16/2022
-* () edit threejs-
-* () videoground-blog-posts - 
-
+* () edit threejs-depth-material
+* () videoground-blog-posts - threejs-depth-material
 * () hexo_sitesource - new header image
 * () build and publish
 
