--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -42,7 +42,7 @@ I should still try to focus on beta world this week, by starting at least one mo
 * () videoground-beta-world - 
 
 ### () - MON 05/16/2022
-* () edit threejs-depth-material
+* (done) edit threejs-depth-material
 * () videoground-blog-posts - threejs-depth-material
 * () hexo_sitesource - new header image
 * () build and publish
