--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -18,10 +18,13 @@ I should still try to focus on beta world this week, by starting at least one mo
 * () edit threejs-plane
 * () videoground-blog-posts - threejs-plane
 * () videoground-beta-world - 
+* () hexo_sitesource - new header image
+
 
 ### () - FRI 05/20/2022
 * () edit threejs-userdata
-* () start post # 988 on threejs-export-png-frames
+* () start post # 988 on threejs-example-object-grid-wrap
+
 * () videoground-blog-posts - threejs-userdata
 * () videoground-beta-world - 
 
@@ -36,25 +39,21 @@ I should still try to focus on beta world this week, by starting at least one mo
 * () videoground-beta-world - 
 
 ### () - TUE 05/17/2022
-* () edit threejs-cone
+* (done) edit threejs-cone
 * () start post # 987 on threejs-vector3-lerp
 * () videoground-blog-posts - threejs-cone
-* () videoground-beta-world - 
+* () videoground-blog-posts - threejs-vector3-lerp
+* () videoground-beta-world - cubescape
 
 ### () - MON 05/16/2022
 * (done) edit threejs-depth-material
-* () videoground-blog-posts - threejs-depth-material
-* () hexo_sitesource - new header image
-* () build and publish
-
-* () videoground-beta-world - 
+* (done) videoground-blog-posts - threejs-depth-material
+* (done) build and publish
+* (done) videoground-beta-world - cubescape
 
 ### () - SUN 05/15/2022
 * (done) edit threejs-light
 * (done) videoground-blog-posts - threejs-light
-
-
-* () videoground-beta-world - 
 
 <!-- ////////// //////////
     WEEK 2
