--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -41,6 +41,8 @@ I should still try to focus on beta world this week, by starting at least one mo
 ### () - TUE 05/17/2022
 * (done) edit threejs-cone
 * () start post # 987 on threejs-vector3-lerp
+* () start for post folder for threejs-vector3-lerp
+
 * () videoground-blog-posts - threejs-cone
 * () videoground-blog-posts - threejs-vector3-lerp
 * () videoground-beta-world - cubescape
