--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -36,16 +36,14 @@ I should still try to focus on beta world this week, by starting at least one mo
 ### () - WED 05/18/2022
 * () edit threejs-object3d
 * () videoground-blog-posts - threejs-object3d
-* () videoground-beta-world - 
+* () videoground-blog-posts - threejs-vector3-lerp
+* () videoground-beta-world - cubescape
 
 ### () - TUE 05/17/2022
 * (done) edit threejs-cone
 * (done) start post # 987 on threejs-vector3-lerp
 * (done) start for post folder for threejs-vector3-lerp
-
-* () videoground-blog-posts - threejs-cone
-* () videoground-blog-posts - threejs-vector3-lerp
-* () videoground-beta-world - cubescape
+* (done) videoground-blog-posts - threejs-cone
 
 ### () - MON 05/16/2022
 * (done) edit threejs-depth-material
