--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -35,7 +35,7 @@ I should still try to focus on beta world this week, by starting at least one mo
 
 ### () - WED 05/18/2022
 * (done) edit threejs-object3d
-* () edit threejs-vector3-lerp
+* (done) edit threejs-vector3-lerp
 * () videoground-blog-posts - threejs-object3d
 * () videoground-blog-posts - threejs-vector3-lerp
 * () videoground-beta-world - cubescape
