--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -31,14 +31,13 @@ I should still try to focus on beta world this week, by starting at least one mo
 ### () - THU 05/19/2022
 * () edit threejs-object3d-parent
 * () videoground-blog-posts - threejs-object3d-parent
-* () videoground-beta-world - 
+* () videoground-blog-posts - threejs-vector3-lerp
+* () videoground-beta-world - cubescape
 
 ### () - WED 05/18/2022
 * (done) edit threejs-object3d
 * (done) edit threejs-vector3-lerp
-* () videoground-blog-posts - threejs-object3d
-* () videoground-blog-posts - threejs-vector3-lerp
-* () videoground-beta-world - cubescape
+* (done) videoground-blog-posts - threejs-object3d
 
 ### () - TUE 05/17/2022
 * (done) edit threejs-cone
