--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -29,7 +29,7 @@ I should still try to focus on beta world this week, by starting at least one mo
 * () videoground-beta-world - 
 
 ### () - THU 05/19/2022
-* () edit threejs-object3d-parent
+* (done) edit threejs-object3d-parent
 * () videoground-blog-posts - threejs-object3d-parent
 * () videoground-blog-posts - threejs-vector3-lerp
 * () videoground-beta-world - cubescape
