--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -17,6 +17,8 @@ I should still try to focus on beta world this week, by starting at least one mo
 ### () - SAT 05/21/2022
 * () edit threejs-plane
 * () videoground-blog-posts - threejs-plane
+* () videoground-blog-posts - threejs-object3d-parent
+* () videoground-blog-posts - threejs-vector3-lerp
 * () videoground-beta-world - 
 * () hexo_sitesource - new header image
 
@@ -30,8 +32,7 @@ I should still try to focus on beta world this week, by starting at least one mo
 
 ### () - THU 05/19/2022
 * (done) edit threejs-object3d-parent
-* () videoground-blog-posts - threejs-object3d-parent
-* () videoground-blog-posts - threejs-vector3-lerp
+* (done) videoground-blog-posts - threejs-buffer-geometry-attributes-normals
 * () videoground-beta-world - cubescape
 
 ### () - WED 05/18/2022
